tests/test_variable_state/good/simple.catala_en
## Test

```catala
declaration scope A:
  internal foo content integer
    state bar
    state baz
    state fizz

scope A:
  definition foo state bar equals 1

  definition foo state baz equals foo + 1

  definition foo state fizz equals foo + 1
```
